<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/calculate_bmi_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_bmi_for"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radio_button_option_adult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/calculate_bmi_for"
            app:layout_constraintTop_toBottomOf="@id/calculate_bmi_for">

            <RadioButton
                android:id="@+id/radio_button_option_child"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child_age_2_to_19" />

            <RadioButton
                android:id="@+id/radio_button_option_adult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adult_age_20_plus" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/radio_group"
            app:layout_constraintTop_toBottomOf="@id/radio_group">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weight_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/height_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_ft"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/weight_textInputLayout"
            app:layout_constraintTop_toBottomOf="@id/weight_textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/height_textInputLayoutEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/height_textInputLayout"
            app:layout_constraintTop_toBottomOf="@id/height_textInputLayout" />

        <TextView
            android:id="@+id/bmi_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            tools:text="Your BMI is 27.7 (Over weight)" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

